# systems-fundamentals

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  academic_dishonesty.txt  shreesharma
cream-client/: Makefile  README.md
cream-client/include/: client.h  cream.h  csapp.h
cream-client/lib/: csapp.c
cream-client/src/: cream_client.c
hw0/: README.md
hw0/tests/: test.c
hw2/: Makefile  README.md  shreesharma.csv
hw2/include/: utf.h  wrappers.h
hw2/rsrc/: sample_utf16bebom.txt  sample_utf16lebom.txt  sample_utf8bom.txt
hw2/src/: args.c  main.c  utf.c  utf16be.c  utf16le.c  utf8.c  wrappers.c
hw2/tests/: utf_tests.c
hw3/: .gitignore  README.md  shreesharma.csv
hw3/include/: header.h  sfmm.h
hw3/src/: main.c  sfmm.c
hw3/tests/: sfmm_tests.c
hw4/: HW_Instructions.md  Makefile  Makefile.config  README.md  auto-tests.csv  manual-tests.csv  shreesharma.csv  testcmds.sf
hw4/include/: debug.h  sfish.h
hw4/src/: main.c
hw4/test-cases/100_exit/output/: stdout
hw4/test-cases/101_help/expected/: stdout
hw4/test-cases/101_help/output/: stdout
hw4/test-cases/102_pwd/expected/: stdout
hw4/test-cases/102_pwd/output/: stdout
hw4/test-cases/103_chdir/expected/: stdout
hw5/: .gitignore  CMakeLists.txt  Makefile  Makefile.config  README.md  shreesharma-server.csv  shreesharma.csv
hw5/include/: const.h  cream.h  debug.h  extracredit.h  hashmap.h  queue.h  utils.h
hw5/src/: cream.c  csapp.c  extracredit.c  hashmap.c  queue.c  utils.c
hw5/tests/: extracredit_tests.c  hashmap_tests.c  queue_tests.c
include/: sfmm.h
src/: sfmm.c
(+53 files in other folders)
